--- a/demo.html
+++ b/demo.html
@@ -7,9 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    3411207063
-    趙奕翔
-    <br>
-    <a href="demo.html"></a>
+    元件練習
 </body>
 </html>
