--- a/demo.html
+++ b/demo.html
@@ -19,6 +19,8 @@
     <h2>段落</h2>
     <p>我是段落</p>
     <hr>
+    <h2>標籤</h2>
+    國立<span style="color: red;">台中</span>科技大學
     <h2>換行</h2>
     123<br>
     456
