--- a/demo.html
+++ b/demo.html
@@ -46,5 +46,29 @@
     <a href="https://www.google.com.tw/?hl=zh_TW" target="_blank">Google</a>
     <br>
     <a href="#up">移到最上面</a>
+    <hr>
+    <h2>圖片</h2>
+    <img src="https://ebus.gov.taipei/File/Get/f952e6b5-3f5c-4b87-80d5-cc590ba72303?v=638470571897248475" alt="" height="100" width="100">
+    <br>
+    <img src="667-1090601-1090898891.gif" alt="" height="100" width="100">
+    <hr>
+    <h2>列表</h2>
+    <ul type="circle">
+        <li>1</li>        
+        <li>2</li>
+        <li>3 </li>
+    </ul>
+    <ol type="A">
+        <li>1</li>        
+        <li>2</li>
+        <li>3 </li>
+    </ol>
+    <hr>
+    <h2>輸入</h2>
+    輸入框:<input type="text">
+    <br>
+    密碼:<input type="password">
+    <br>
+    數字:<input type="number" min="1" max="20">
 </body>
 </html>
